tests/negative/test_import_exit.orb
import (eval (exit true));

fnc main () () {};